--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
     "expo": "~48.0.18",
+    "expo-dev-client": "~2.2.1",
     "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "onesignal-expo-plugin": "^1.3.2",
     "react": "18.2.0",
@@ -31,9 +34,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
-    "yup": "^1.0.2",
-    "expo-splash-screen": "~0.18.2",
-    "expo-dev-client": "~2.2.1"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
