--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,10 @@
       ],
       "@routes/*": [
         "./src/routes/*"
-      ]
+      ],
+      "@notifications/*": [
+        "./src/notifications/*"
+      ],
     }
   }
 }
